--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@studio-freight/lenis": "^1.0.42",
+    "@vueuse/motion": "^3.0.3",
+    "gsap": "^3.13.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
