--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.9.5"
+    "vuetify": "^3.9.5",
+    "vuetify-nuxt-module": "^0.18.8"
   }
 }
