--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fontsource/lato": "^5.2.7",
+    "@fontsource/montserrat": "^5.2.8",
     "@mdi/font": "^7.4.47",
     "@studio-freight/lenis": "^1.0.42",
     "@vueuse/motion": "^3.0.3",
